# ChangeLog for dev-perl/Role-Tiny
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Role-Tiny/ChangeLog,v 1.13 2013/01/06 15:20:08 tove Exp $

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Role-Tiny-1.1.5.ebuild:
  Cleanup

*Role-Tiny-1.2.4 (03 Nov 2012)

  03 Nov 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.2.4.ebuild:
  Version bump

  29 Jul 2012; Torsten Veller <tove@gentoo.org> -Role-Tiny-1.0.1.ebuild,
  -Role-Tiny-1.1.1.ebuild, -Role-Tiny-1.1.2.ebuild, -Role-Tiny-1.1.3.ebuild,
  -Role-Tiny-1.1.4.ebuild:
  Cleanup

*Role-Tiny-1.1.5 (24 Jul 2012)

  24 Jul 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.1.5.ebuild:
  Version bump

*Role-Tiny-1.1.4 (13 Jul 2012)

  13 Jul 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.1.4.ebuild:
  Version bump

*Role-Tiny-1.1.3 (26 Jun 2012)

  26 Jun 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.1.3.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Role-Tiny-1.1.2 (06 May 2012)

  06 May 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.1.2.ebuild:
  Version bump

*Role-Tiny-1.1.1 (28 Apr 2012)

  28 Apr 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.1.1.ebuild:
  Version bump

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -Role-Tiny-1.0.0.ebuild:
  Cleanup

*Role-Tiny-1.0.1 (04 Apr 2012)

  04 Apr 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.0.1.ebuild:
  Version bump

  30 Mar 2012; Torsten Veller <tove@gentoo.org> Role-Tiny-1.0.0.ebuild:
  Older Moo contained Role-Tiny, so block it

*Role-Tiny-1.0.0 (30 Mar 2012)

  30 Mar 2012; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.0.0.ebuild,
  +metadata.xml:
  Initial commit for Moo