@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Role-Tiny-1.002004.tar.gz 21517 SHA256 a69c4d28634ca66f448f84636652628ece6e84c03593d9f233bdbaf8d5342258 SHA512 19c75ab16a1defb9248a67be86fd2bc7c245a8f02e8ba6797744564a41a14382e52e43c25d7c3c233f5749d4697f45584ef472b459e628eba82c3c2b86e0dc96 WHIRLPOOL a80ddff2309cc4fb5285c7e8c3679125b39a21fdeaaf95d2ec121f836e726c7d0667390ed470e671e1e30d3070bc2d00960a0bcc817e877368a266e539902e49
+DIST Role-Tiny-1.002005.tar.gz 21889 SHA256 3905f99efd3b604a5de83265914aaa0ead1dcb45c6e38b58c24a2de0309e5bee SHA512 fff2614720cb6134bef0b903d7caba093f51d48183dd948d2cb7f37b3a7f7046d9f589a49460ea7444aaa113be19404ad4fd46bc9a67df8a2065642e5601daee WHIRLPOOL f3af9e29e597464d96b038faeab34fb63719dfccf7c34374b991b88d0c1478b951ed2ecbce2dd94d1f98d907967f996ef6407ff841a39cd6e7a37368b0b51634
 EBUILD Role-Tiny-1.2.4.ebuild 610 SHA256 80a647c400f1a930337dc0bd9d70af9382844a282e876aa99d5a50879932fccb SHA512 28bfff3d5dbff46885cab753f74d0c319bfc8b956cf0a6fd5c290d2ca7a32f6b0c3338df36e993c69948c58525000835a9ae59180ff1824854b5afe647e4ef6d WHIRLPOOL 8ad5aee3021475f8f51be64b026d6761df2068a787ec05474135efb3ea37a0b70330b8c879b1b7de95ec42dbd6f1f30ff232ada88ae718448634a190e996329b
-MISC ChangeLog 1767 SHA256 118350cc4e45bba4f7088f5fe00412b0168d8185dea600177de4b0b0bc38b142 SHA512 d2289f954d47c851e878c764611835d82c7818f6573d2a08bfcd69c9cd9bcf20a9dc5ff98da342becf16b4e0b495d09b6e9aad34f76eeceb54860dc33d5c77a8 WHIRLPOOL eccc78a7dc3f181c15004bf79e7886c6533323273790109daa921fd3e7a80d1db611c8509dcf299eb17a25f7bf375dfaabed793768b509a39eb2c6cc486b1c55
+EBUILD Role-Tiny-1.2.5.ebuild 611 SHA256 6449971af5a6060116059e7396d3410535de76edb3ddc76714501634e1b2899e SHA512 c72a8d8c7a98af3343ff0f2bf7953293a9a76c34f9192c09ba7355875d466cb8282f193b5bb51685833b867eaef66ffed785148856cdfa0315ca239bdcd17c24 WHIRLPOOL 5d857ba7251049d1571def791c0b4380034e938bbd09de37d33987cdb2e38fb856830a855abefbe60a50b9a071fc7aae20cd79e76323880e384ad7729e0bde79
+MISC ChangeLog 1888 SHA256 082ead5662f90fc3f2be22d0a37e9df4caf6d44113a52f65b46a0dbadc23aad1 SHA512 b538ffca2e84fb22d8886805c460d79720a773a910aa4300abfe1e4ef2e07df678963649d093fc34f3600d53ab3a2e47a533c0378f9a759ce691b0f737f99d05 WHIRLPOOL 531de09f2080cf0b32aa3fc49b1edbea5b6aba095c2a3afa34fb186a28b95eaf6e3debf14d0b21be6718e65ca452f8a748dcd39720e4d74be71c61b073150aab
 MISC metadata.xml 355 SHA256 2c3b78b04fdaa3bbe43ce8e4c6c0e6860d67c090d288d0d1b7acbdd37c140b1e SHA512 32f3c5e42c88aef0c9995a9cc5f336fcb2b8713cfc3803d8ecbac1526bcc272d3bed97624863a29663c5425cf90d490baad83b2581a7c9852aadcad0949ce5cd WHIRLPOOL 5ffce1566e26f1ca6a7e8dc6da16f63263e929bdf6cf2f137d4ee03a6e07dd0e10d62a37ca48ee80e65ddae5ca6e2e593836e0d6b3dba856cbb7b6c7cc8dd1e8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDplikACgkQV3J2n04Eauw8QgCgxYDQBYbVNBksZwLEpBTTKul9
-4kMAnAq8jOtLmmgoOc3B711yVQOxFLYy
-=ATaU
+iEYEAREIAAYFAlEOYlQACgkQV3J2n04Eauy5nACgqe9ziWITihda4z5Q9eAluyKo
+rq8An1JYQ3oIsdt4689wkCDA5eJHm++W
+=/2dZ
 -----END PGP SIGNATURE-----
