@@ -1,4 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Time-modules-2011.0517.tar.gz 25621 SHA256 8edffdc9ca55ccb19690ed45e8e224083904f0426650d6dc460dcdbc50a265ee SHA512 5cb9be993db47bf5c37fbe6a473d77142af16d9a6bac8b82388d536296b72ccb54c8fef13ff436f34892de331617bcca9921dcde614e344f0fef314f78c5d085 WHIRLPOOL 25ece948c7e4d59083158e2ac5f67fcd3a66b98d2196059c790a30c9d1edbfe23fe4b66f482a30661e9a6d508db5b98bc0e99fefa30854d1e300676b06f22d5c
-EBUILD Time-modules-2011.51.700.ebuild 458 SHA256 b382729dad34cc15962a05a0d75b5d2ae2cf22375d2b4a543315b0472d594df1 SHA512 4a982673874decd7c237eade99d3f29ceb8591d389badb1ca6b4090c9db88f43415322742ca3f4b98818ed4f4f254d7cb4f1cd514f9cc97ec9cd20d1e8e0ca88 WHIRLPOOL 69ddc1b4b7faec57b4b0b9a6adfcef14942a38bc85f7bc327311cabafa89566e9ddcbc1529d388669b56734f22a85181dc45ffebd1adf374b990633ebfcd67d6
-MISC ChangeLog 4240 SHA256 b5a654f4179751b271d935bfa929abd36d7f72ff3cf8afc7d053420e5ca6f0df SHA512 5bbeea47187ba56eaaa6d9a2a81b67ad0673d7a1e9aca32545cf064fb7454d3d6160153eb52aef2286f707ebb9d3c2b477f10ad9251a682f98c39cd72ed4c520 WHIRLPOOL 975c9ad40130f5530cb1d6d4de92b869a2923b069f899c30200a982eea5d43d40f259fe06524930fc434fa67e67f57541a045f265627c4b1642448ee62175b38
+EBUILD Time-modules-2011.51.700.ebuild 476 SHA256 0f7ce75c872900f3d0e42a225c34ab44900ba942ca906bbcee5a84977a96956e SHA512 56d0f7428c2657a80b6907a450ebffe313bb5e34e83d7fea208240e866acdec72ad1da322980c9c0b44161b0f9f56a36de7ddb90e15f3ed7159928fbfd2f90f0 WHIRLPOOL ae7f0e26ac128b14f3aeefb3773e35a69ae721ae379fe79a27f9483444556d0d1190a6f92bbca371cbd2ca97df47b601f9bf3ec6a62cbddf536928f56c8b9c9c
+MISC ChangeLog 4347 SHA256 2d01a0884a5bb43b8f9919e19112934065104ec080ef932c892745bfdae09b17 SHA512 96a5e3193be6b7c90b2456bbc2d6334d51c7ae0dd55723e42682843498e5643fa3334c24e6e9a0745de534a6ac8f8ad3b9d554080d11c06120bb40b72a334c23 WHIRLPOOL e1dd6b0ba86e55b016299ed92756c80cd756355dc871a98b0da63500f09a399b7a1cfa17ac039a0ec6ce4da8bd786e7053417200f90a87bd8850021b6a171483
 MISC metadata.xml 545 SHA256 37fecc40c1e97d6c2a7d347145a766e25af98a465ac7cef31b0b82134dd5c295 SHA512 b3e49bc3471c40971e173997c02bc8954abf8f47ede7d6604fe9d8ca15f374be7f2dc91257fa453605de4186bce184d1fa8039d42f858ac5da1d8907621cfbeb WHIRLPOOL 1a4f502d9bd0c7f0be3df36837e19b6092bcaa9f0b7883323bf2fcccd3bc19a3991550b600aa760e2a3c9e4210181feb723cd10eadc511264e1ebd9cc1a3a302
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJRDVpzAAoJEDxpGckxwJCB050P/RMsJhSyA8oHfHmvfhbpU42E
+p9NJuoR9+a2BGkL2zQXHefqkvf/e95UxIp2Brc8Civ1l6tcvi2vuP/W4MwMppF1S
+nbNcj/tv2GPTCA0n9RoYtENTDzAVelX3hbSJGKIxIKjcI83DZxJ4e3+aZWKIq5sN
+KXzhxVCA2qkYggeCmp6UCl6DK8Sb1OChIGgKHeWxKYZFhc5ACR35Y38wG6aYEJh0
+wdunxo57Enq9hA6P2to5DGiDqyHQlapJSLjS9INx1uaJ4n3w1YG+mrJbOkYCX435
+dFgCUcbT5bfnaCqeJjo4WOYR0rcBitqynnnfkQPG/bM27c1Y2ATZkhW13iRc5ey1
+PxrHbqrucgRnluvhCK4D1m63DEwbww1KUXiqG2x6553l3TH/ZKDEvUOQW6nezcX7
+6KAzYpFzK40jN/eS/ryGcMyYM0vKr/cH2/gRegY86nTe0Rka4XZtwmEohS9bLs5m
+gViB7D+NutGS4tF2R5vvOxSZnPNiMUU3mSJAK51ShNAjY2GBLAaTJViWQ++8zDYU
+/yd44SEgdKHbn9Hc4V3edPF8LvoDlO3tAoEJ1kteqHQYFaXNaq4kyDkFNbmuxFAl
+dHsc7XE3/t+LCldbtLGVheTp3CQvG5CbpXTprrVF1uQrx9nGXAlRbwpFLAp9zbMH
+hmv4x8p2uTEIGsyCcWzD
+=oEg/
+-----END PGP SIGNATURE-----
