@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Time-modules/Time-modules-2011.51.700.ebuild,v 1.5 2012/03/02 21:42:09 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Time-modules/Time-modules-2011.51.700.ebuild,v 1.6 2013/02/02 18:23:38 ulm Exp $
 
 EAPI=4
 
@@ -11,8 +11,8 @@ inherit perl-module
 
 DESCRIPTION="A Date/Time Parsing Perl Module"
 
+LICENSE="Time-modules public-domain"
 SLOT="0"
-LICENSE="as-is"
 KEYWORDS="amd64 ppc ppc64 x86"
 IUSE=""
 
