@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST XML-RSS-1.49.tar.gz 127216 SHA256 13d5c3277f62143a8f0a04236e4bc850c85d515588e7f6d171b883edd3e07473 SHA512 5b00eb0296c91924fcbf12c16b17a9a4efe6b0a55edc54b04657a69370487a82c5c36e9a16dd154e7022b15d264b25721a7b90feddf3dfbb2fd42bd2d03ab387 WHIRLPOOL 5210a4e3d3f1d40bde9dcf4b698abcf3d68960e86c7a2797e9cb2b25571a26ddebad8b7a76441aff9c1fc22340eb93af7672ebbbd9294ff5fcfa6ba5e07a8c36
 EBUILD XML-RSS-1.490.0.ebuild 800 SHA256 c1b859aebc98e67ca0ab07aadcec8692a48a869e5f2c7cbe1dc0ef9a69b4eca5 SHA512 2034afd97d619de27fd0493d2acba769d36bba9423d5b534d82e9889a61343dc335b1fb0b513fdf567f98d8823fd764d1cc431eb766389aa18b3047f098fed70 WHIRLPOOL 7198c748acddf224a17e6c397696fe8cecf03898dbab3e70b922bf82f83056c3e834af9d31f2fb6d2db34a62077a11c2b6ee90b058f7cd9370d394d593759be6
-MISC ChangeLog 10637 SHA256 21effc36e4bfda948248126d991428a58df818622ce78e9ae246cb41795cd749 SHA512 d530df2fb9c621ea7e4120aa5784a378261896e8c6813a85755b4d0f663180063198bbf3267f4ab3dc8add75c9e03092434a82d576d5cbfc1f1fec653f94d182 WHIRLPOOL 4fc9a7cbb44864fa35266f8fd03d16bfc384abca3a61950865ac9762c67d0fca08f8a29f84d2ff72d7d4ee044389883cc15cab6c72e7c7ce8c93a5caf764bfdb
-MISC metadata.xml 980 SHA256 b3667b9da5a3028f93c67dc41cd89e47dff0ab897c89de679624ab18cd244988 SHA512 eaf70d924df39a9b85a2f1dbbd09901689efd15b6513c0b8b3bc25e3470c656c5043f4a87f973f18b5114cf2bebefe4550839fb6d8b3e937a0a2de0239dcc279 WHIRLPOOL 12b439f66e30210bbef620ba19e08b5abf9177e041216c0c10da2fc7bdaec6ecf0e124475cc53b7d23a87c381ec4e609b5f2e3ee18e4666d2845d3addf60af37
+MISC ChangeLog 10720 SHA256 20e48a9eab24dfa1fdcafe9778dde102e9ffdbbce903a6148e138b0f54fa2558 SHA512 582dd7551501a23dce88e0eebbd907276f5fb7d913ed1485c9dd261a4651cd4195cfe42ae1fcc2301a65a47b6559cbe124b6d9f52640023e073e95ab31f4ad61 WHIRLPOOL 47d88d58cf48d6e1309d8dde20e777194050791bbb40cb9077c240fdaca11df28d0ff3479bf06af3192f5fc17c05078e16f460538366f5fe35d5793a9877f06b
+MISC metadata.xml 862 SHA256 abf93f3ed66d168c28a7584753c6ce14292e2c9bb37e79f36484f43430c42780 SHA512 78ddcff8ef840ba70c1847b26a505b4818517a63b18aae80d901b8c50edad19e3451f7a10e49f284b0359eac3d3651baf02b1569ee00436a3ed59c69c3e10fcf WHIRLPOOL 3d94b2ce31362cd221ba8ba33f6ff261e02b751f4aa6f407937d82d36dc9deeb889db1f31e96ddcb58ca3926629476f02810a6560ccb8bc3410e03553822fe5d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlEOVeMACgkQCaWpQKGI+9RTawCdFXatQKlnXGBc0HXRlmW72BDb
+oJUAnRm+f521gxaX8Ck8j6/PtNQJCkq8
+=Itqi
+-----END PGP SIGNATURE-----
