@@ -2,10 +2,6 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
   <herd>perl</herd>
-  <maintainer>
-    <email>matsuu@gentoo.org</email>
-    <description>Primary Maintainer</description>
-  </maintainer>
   <upstream>
     <remote-id type="cpan">XML-RSS</remote-id>
     <remote-id type="cpan-module">XML::RSS</remote-id>
