@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Time-modules
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Time-modules/ChangeLog,v 1.35 2012/06/24 13:00:29 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Time-modules/ChangeLog,v 1.36 2013/02/02 18:23:38 ulm Exp $
+
+  02 Feb 2013; Ulrich Müller <ulm@gentoo.org> Time-modules-2011.51.700.ebuild:
+  Fix LICENSE, bug 453004.
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
