@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Role-Tiny
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Role-Tiny/ChangeLog,v 1.13 2013/01/06 15:20:08 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Role-Tiny/ChangeLog,v 1.14 2013/02/03 13:12:51 tove Exp $
+
+*Role-Tiny-1.2.5 (03 Feb 2013)
+
+  03 Feb 2013; Torsten Veller <tove@gentoo.org> +Role-Tiny-1.2.5.ebuild:
+  Version bump
 
   06 Jan 2013; Torsten Veller <tove@gentoo.org> -Role-Tiny-1.1.5.ebuild:
   Cleanup
